--- a/android/app/src/main/res/values/braze.xml
+++ b/android/app/src/main/res/values/braze.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="com_braze_api_key">BRAZE_API_KEY_REPLACE_ME</string>
-  <string translatable="false" name="com_braze_custom_endpoint">BRAZE_API_ENDPOINT_REPLACE_ME</string>
+  <string name="com_braze_api_key">a1c7f39c-af88-4e6b-b861-96d150c6e226</string>
+  <string translatable="false" name="com_braze_custom_endpoint">sdk.iad-05.braze.com</string>
   <bool translatable="false" name="com_braze_firebase_cloud_messaging_registration_enabled">true</bool>
-  <string translatable="false" name="com_braze_firebase_cloud_messaging_sender_id">BRAZE_SENDER_ID_REPLACE_ME</string>
+  <string translatable="false" name="com_braze_firebase_cloud_messaging_sender_id">149194066736</string>
   <bool name="com_braze_handle_push_deep_links_automatically">false</bool>
 </resources>
